# my_project

./: .gitignore  .pre-commit-config.yaml  README.md  mlruns.db  pyproject.toml  pytest.ini
.dvc/: config
.github/workflows/: ci.yaml
.hydra/: config.yaml  hydra.yaml
configs/: callbacks.yaml  config.yaml  data.yaml  downloads.yaml  experiment.yaml  floodnet_unet.yaml  inference.yaml  logger.yaml  model.yaml  trainer.yaml
data/: .gitignore  test.dvc  train.dvc
src/: data_loader.py  module.py  train.py
src/callbacks/: callbacks.py  plot_callbacks.py
src/data/: datamodule.py  dataset.py  dataset_download.py
src/loggers/: logger.py  tensorboard_logger.py
src/models/: unet_lightning.py  unet_model.py
src/trainers/: inference.py  train.py
tests/: test_data_loader.py  test_module.py  test_train.py
