[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Ilia Stepanov <iliatut94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.6"
pandas = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
