[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Ilia Stepanov <iliatut94@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.6"
pandas = "^2.3.0"
torch = "^2.7.1"
torchvision = "^0.22.1"
pytorch-lightning = "^2.5.1.post0"
opencv-python = "^4.11.0.86"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
