[tool.poetry]
name = "unet-prod"
version = "0.1.0"
description = ""
authors = ["Ilia Stepanov <iliatut94@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.6"
pandas = "^2.3.0"
torch = "^2.7.1"
torchvision = "^0.22.1"
pytorch-lightning = "^2.5.1.post0"
opencv-python = "^4.11.0.86"
albumentations = "^2.0.8"
tensorboard = "^2.19.0"
gdown = "^5.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.0"
pyopenssl = ">=23.2.0"
cryptography = ">=36.0.0"
dvc = "^3.60.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
